--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -1,4 +1,60 @@
 <!--<c-header class="mb-4 d-print-none" position="sticky">-->
+<!--<c-modal id="liveDemoModal" [visible]="visible" (visibleChange)="handleLiveDemoChange($event)">-->
+<!--  <c-modal-header>-->
+<!--    <h5 cModalTitle>Información del usuario</h5>-->
+<!--    <button (click)="toggleLiveDemo()" cButtonClose></button>-->
+<!--  </c-modal-header>-->
+<!--  <c-modal-body>-->
+<!--    <p><strong>Cédula:</strong>{{sessionStorage.getItem('cedula')}}</p>-->
+<!--    <p><strong>Nombre:</strong>{{sessionStorage.getItem('nombre')}}</p>-->
+<!--    <p><strong>Apellido:</strong>{{sessionStorage.getItem('apellido')}}</p>-->
+<!--  </c-modal-body>-->
+<!--  <c-modal-footer>-->
+<!--    <button (click)="toggleLiveDemo()" cButton color="secondary">Cerrar</button>-->
+<!--  </c-modal-footer>-->
+<!--</c-modal>-->
+<!--<c-modal id="liveDemoModal" [visible]="visible" (visibleChange)="handleLiveDemoChange($event)">-->
+<!--  <c-modal-header class="modal-header-custom">-->
+<!--    <svg cIcon class="icon-secretary me-2" name="cilUser" size="lg"></svg>-->
+<!--    <h5 cModalTitle>Información del usuario</h5>-->
+<!--    <button (click)="toggleLiveDemo()" cButtonClose></button>-->
+<!--  </c-modal-header>-->
+<!--  <c-modal-body>-->
+<!--    <div class="d-flex align-items-center">-->
+<!--&lt;!&ndash;      <img src="https://via.placeholder.com/100" alt="Secretary" class="rounded-circle me-3">&ndash;&gt;-->
+<!--      <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Secretary" class="rounded-circle me-3">-->
+<!--      <div>-->
+<!--        <p><strong>Cédula:</strong> {{sessionStorage.getItem('cedula')}}</p>-->
+<!--        <p><strong>Nombre:</strong> {{sessionStorage.getItem('nombre')}}</p>-->
+<!--        <p><strong>Apellido:</strong> {{sessionStorage.getItem('apellido')}}</p>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </c-modal-body>-->
+<!--  <c-modal-footer>-->
+<!--    <button (click)="toggleLiveDemo()" cButton color="secondary">Cerrar</button>-->
+<!--  </c-modal-footer>-->
+<!--</c-modal>-->
+<c-modal id="liveDemoModal" [visible]="visible" (visibleChange)="handleLiveDemoChange($event)" class="modal-custom">
+  <c-modal-header class="modal-header-custom">
+    <svg cIcon class="icon-secretary me-2" name="cilUser" size="lg"></svg>
+    <h5 cModalTitle>Información del usuario</h5>
+    <button (click)="toggleLiveDemo()" cButtonClose></button>
+  </c-modal-header>
+  <c-modal-body>
+    <div class="d-flex align-items-center">
+      <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Secretary" class="rounded-circle me-3">
+      <div>
+        <p><strong>Cédula:</strong> {{sessionStorage.getItem('cedula')}}</p>
+        <p><strong>Nombre:</strong> {{sessionStorage.getItem('nombre')}}</p>
+        <p><strong>Apellido:</strong> {{sessionStorage.getItem('apellido')}}</p>
+      </div>
+    </div>
+  </c-modal-body>
+  <c-modal-footer>
+    <button (click)="toggleLiveDemo()" cButton color="secondary">Cerrar</button>
+  </c-modal-footer>
+</c-modal>
+
 <ng-container>
   <c-container [fluid]="true" class="border-bottom px-4">
     <button
@@ -114,8 +170,8 @@
         </h6>
       </li>
       <li></li>
-      <li>
-        <a cDropdownItem routerLink="">
+      <li (click)="toggleLiveDemo()">
+        <a cDropdownItem class="pointer-cursor">
           <svg cIcon class="me-2" name="cilUser"></svg>
           Profile
         </a>
@@ -198,11 +254,11 @@
           <span class="ms-2">
             <span class="d-inline-block">
               <button class="btn p-0 ml-2" (click)="desplegarcrud()"> <svg cIcon name="cilPencil" size="lg"></svg></button>
-             
+
             </span>
           </span>
         </h5>
-         
+
         <div style="margin-left: 10px;"> <!-- Ajuste de margen izquierdo -->
           <span>Tiempo de Respuesta</span>
           <label class="d-block mt-2">
@@ -211,16 +267,16 @@
           <!-- Aquí van los campos para editar la configuración -->
 
           <div *ngIf="showTable">
-          
-  
+
+
             <label cLabel for="customRange1">Segundos: <strong>{{value}}</strong></label>
             <br>
             <input [(ngModel)]="value" cFormControl id="customRange1" [max]="480" [min]="1" type="range" class="full-width-range" />
             <br>
             <button type="submit" class="btn btn-primary" (click)="actualizartiempo()">Guardar</button>
-           
-           
-            
+
+
+
           </div>
         </div>
       </div>
