--- a/src/app/layout/default-layout/default-header/default-header.component.scss
+++ b/src/app/layout/default-layout/default-header/default-header.component.scss
@@ -1,11 +1,11 @@
 .form-group {
     margin-bottom: 15px;
   }
-  
+
   .form-control {
     width: 100%;
   }
-  
+
   .btn {
     margin-top: 10px;
   }
@@ -16,3 +16,64 @@
   .full-width-range {
     width: 100%;
   }
+
+/* styles.css */
+.pointer-cursor {
+  cursor: pointer;
+}
+//.modal-header-custom {
+//  display: flex;
+//  align-items: center;
+//  background-color: #f8f9fa;
+//  border-bottom: 1px solid #aacef1;
+//}
+//
+//.icon-secretary {
+//  color: #999999;
+//}
+//
+//.c-modal-body {
+//  padding: 1.5rem;
+//}
+//
+//img.rounded-circle {
+//  width: 100px;
+//  height: 100px;
+//}
+//.modal-custom {
+//  z-index: 1050; /* Ensure modal is above other elements */
+//}
+//
+.modal-custom {
+  z-index: 9050; /* Ensure modal is above other elements */
+  position: fixed; /* Ensure it stays in one place */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-header-custom {
+  display: flex;
+  align-items: center;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #dee2e6;
+}
+
+.icon-secretary {
+  color: #6c757d;
+}
+
+.c-modal-body {
+  padding: 1.5rem;
+}
+
+img.rounded-circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
